# BSUIR--3

./: .gitignore  CMakeLists.txt  README.adoc  README.md  dev_opt.cpp  dev_opt.h  gam_opt.cpp  gam_opt.h  main.cpp  sonar-project.properties  user_interfaces.h
.github/workflows/: build.yml
source/: ActionGame.cpp  DeveloperUser.cpp  Game.cpp  GamerUser.cpp  RPGGame.cpp  Template.cpp  User.cpp  devOpt.cpp  developerUser.cpp  developermenu.cpp  developermenu.ui  devprofile.cpp  devprofile.ui  enterwindow.cpp  enterwindow.ui  gamOpt.cpp  gameIterator.cpp  gamecollection.cpp  gameprofile.cpp  gameprofile.ui  gamerUser.cpp  gamermenu.cpp  gamermenu.ui  main.cpp  mainwindow.cpp  mainwindow.ui  registrationwindow.cpp  registrationwindow.ui  sonar-project.properties  user_interfaces.cpp
source/header/: ActionGame.h  DeveloperUser.h  Game.h  GameException.h  GamerUser.h  RPGGame.h  Template.h  User.h  UserExceprion.h  UserException.h  devOpt.h  developerUser.h  developermenu.h  devprofile.h  enterwindow.h  gamOpt.h  gameIterator.h  gamecollection.h  gameprofile.h  gamerUser.h  gamermenu.h  mainwindow.h  registrationwindow.h
